# aoc2020

./: pyproject.toml
day23/: 23.py
day24/: 24.py
